--- a/demo/package.json
+++ b/demo/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "private": true,
   "version": "1.0.0",
-  "description": "Demo for gatsby-theme-minimal",
+  "description": "Demo for gatsby-theme-gallery",
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build",
@@ -15,6 +15,7 @@
     "gatsby": "^2.13.25",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-theme-gallery": "*",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
