--- a/gatsby-theme-gallery/package.json
+++ b/gatsby-theme-gallery/package.json
@@ -16,7 +16,11 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "gatsby-plugin-typescript": "^2.1.2"
+    "gatsby-image": "^2.2.7",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.2.5"
   },
   "author": "Emmanuel Pilande",
   "license": "MIT",
