--- a/gatsby-theme-gallery/package.json
+++ b/gatsby-theme-gallery/package.json
@@ -16,11 +16,15 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.14",
+    "@mdx-js/react": "^1.1.1",
     "gatsby-image": "^2.2.7",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-theme-ui": "^0.2.23",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-filesystem": "^2.1.6",
-    "gatsby-transformer-sharp": "^2.2.5"
+    "gatsby-transformer-sharp": "^2.2.5",
+    "theme-ui": "^0.2.23"
   },
   "author": "Emmanuel Pilande",
   "license": "MIT",
