--- a/gatsby-theme-gallery/package.json
+++ b/gatsby-theme-gallery/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-sharp": "^2.2.5",
+    "react-modal-image": "^2.4.0",
     "theme-ui": "^0.2.23"
   },
   "author": "Emmanuel Pilande",
